css overlap fix

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -123,7 +123,7 @@ outer {
   display: cell;
   width: 295px;
   float: left;
-  position: fixed;
+  position: sticky;
   max-height: 100%;
   min-height: 80vh;
   overflow-y: auto;
